--- a/.github/workflows/bytebuoy_agent.yml
+++ b/.github/workflows/bytebuoy_agent.yml
@@ -13,6 +13,9 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./API/
 
     steps:
     - uses: actions/checkout@v3
@@ -22,7 +25,7 @@ jobs:
         dotnet-version: 8.0.x
     - name: Restore dependencies
       run: dotnet restore 
-      working-directory: ./API/
+
     - name: Build
       run: dotnet build --no-restore
     - name: Test
