--- a/.github/workflows/bytebuoy_agent.yml
+++ b/.github/workflows/bytebuoy_agent.yml
@@ -1,13 +1,17 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: .NET
+name: .NET WebAPI
 
 on:
   push:
     branches: [ "main" ]
+    paths:
+      - 'API/**'
   pull_request:
     branches: [ "main" ]
+    paths:
+      - 'API/**'    
 
 jobs:
   build:
