--- a/src/ByteBuoy.API/ByteBuoy.API.csproj
+++ b/src/ByteBuoy.API/ByteBuoy.API.csproj
@@ -12,6 +12,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="appsettings.json.sample" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="appsettings.json.sample" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Azure.Identity" Version="1.10.4" />
     <PackageReference Include="FluentValidation" Version="11.9.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
