--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,3 @@
+title: ByteBuoy Documentation
+description: Documentation of ByteBuoy - An Open-Source File & Artefact Monitoring Solution
 theme: jekyll-theme-minimal
