hotfix: github action name yaml error

--- a/.github/workflows/docker-publish_web-client.yml
+++ b/.github/workflows/docker-publish_web-client.yml
@@ -1,4 +1,4 @@
-name: ByteBuoy Web-Client: Build & Publish Docker image
+name: "ByteBuoy Web-Client: Build & Publish Docker image"
 
 on:
   release:
