--- a/.github/workflows/bytebuoy_agent.yml
+++ b/.github/workflows/bytebuoy_agent.yml
@@ -1,7 +1,4 @@
-# This workflow will build a .NET project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
-
-name: ByteBuoy Agent: Build .NET Executables
+name: "ByteBuoy Agent: Build .NET Executables"
 
 on:
   push:
