--- a/src/ByteBuoy.Infrastructure.Data/ByteBuoy.Infrastructure.Data.csproj
+++ b/src/ByteBuoy.Infrastructure.Data/ByteBuoy.Infrastructure.Data.csproj
@@ -18,4 +18,8 @@
 		</PackageReference>
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.1" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Migrations\" />
+	</ItemGroup>
 </Project>
