--- a/src/ByteBuoy.Infrastructure/ByteBuoy.Infrastructure.csproj
+++ b/src/ByteBuoy.Infrastructure/ByteBuoy.Infrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Riok.Mapperly" Version="3.3.0" />
     <PackageReference Include="YamlDotNet" Version="13.7.1" />
   </ItemGroup>
 
