--- a/test/ByteBuoy.API.Tests/Fixtures/ConfigV1JobTemplate_Invalid.yml
+++ b/test/ByteBuoy.API.Tests/Fixtures/ConfigV1JobTemplate_Invalid.yml
@@ -1,6 +1,6 @@
-version: 1
 host: localhost:5001
-apikey: bb_DUMMYAPIKEY
+apiKey2: bb_DUMMYAPIKEY
+pageId: bb_DUMMYPAGEID
 jobs:
   - name: Copies all files from sources to targets
     action: filesCopy@v1
@@ -12,32 +12,3 @@ jobs:
     labels:
       customer: customer1
       customer2: someRandom Value
-
-  - name: Run some Bash Commands
-    action: bashCommands@v1
-    commands:
-      - ls -la
-    workingDirectory: c:\SourceFolder\ByteBuoy   
-  
-  - name: Another Copy Job
-    action: filesCopy@v1
-    sources: 
-      - c:\SourceFolder\ByteBuoy\myFiles\v1\Customer2*.xml
-    targets:
-      - c:\TargetFolder\TargetFolder2
-    labels:
-      customer: customer2
-
-  - name: Just checking file hashes (Customer 2)
-    action: checkHashes@v1
-    paths:
-      - c:\SourceFolder\ByteBuoys\myFiles\v1\Customer2*.xml
-    labels:
-      customer: customer2
-
-  - name: Just checking file exists (Customer 3)
-    action: checkFiles@v1
-    paths: 
-      - c:\SourceFolder\ByteBuoys\myFiles\v1\Customer3*.xml
-    labels:
-       customer: customer3
