--- a/test/ByteBuoy.API.Tests/Fixtures/ConfigV1JobTemplate_Valid.yml
+++ b/test/ByteBuoy.API.Tests/Fixtures/ConfigV1JobTemplate_Valid.yml
@@ -1,6 +1,7 @@
 version: 1
 host: localhost:5001
-apikey: bb_DUMMYAPIKEY
+apiKey: bb_DUMMYAPIKEY
+pageId: bb_DUMMYPAGEID
 jobs:
   - name: Copies all files from sources to targets
     action: filesCopy@v1
@@ -13,14 +14,15 @@ jobs:
       customer: customer1
       customer2: someRandom Value
 
-  - name: Run some Bash Commands
-    action: bashCommands@v1
+  - name: Run some command Line commands
+    action: commandLine@v1
     commands:
       - ls -la
     workingDirectory: c:\SourceFolder\ByteBuoy   
   
-  - name: Another Copy Job
-    action: filesCopy@v1
+  - name: Move Files Job
+    action: filesMove@v1
+    overwrite: true
     sources: 
       - c:\SourceFolder\ByteBuoy\myFiles\v1\Customer2*.xml
     targets:
@@ -29,15 +31,29 @@ jobs:
       customer: customer2
 
   - name: Just checking file hashes (Customer 2)
-    action: checkHashes@v1
+    action: filesHashes@v1
+    hashAlgorithm: MD5
     paths:
       - c:\SourceFolder\ByteBuoys\myFiles\v1\Customer2*.xml
     labels:
       customer: customer2
 
   - name: Just checking file exists (Customer 3)
-    action: checkFiles@v1
+    action: filesExists@v1
     paths: 
       - c:\SourceFolder\ByteBuoys\myFiles\v1\Customer3*.xml
+    labels:
+       customer: customer3
+
+  - name: Upload Files to SSH Server
+    action: sshUpload@v1
+    host: myserver.local
+    port: 22
+    username: myuser
+    password: mypassword
+    sources: 
+      - c:\SourceFolder\ByteBuoys\myFiles\v1\Customer3*.xml
+    targets:
+      - /targetfolder/
     labels:
        customer: customer3
