refactoring, added api contracts, added controllerrs

--- a/src/ByteBuoy.Agent/ByteBuoy.Agent.csproj
+++ b/src/ByteBuoy.Agent/ByteBuoy.Agent.csproj
@@ -20,6 +20,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\ByteBuoy.Application\ByteBuoy.Application\ByteBuoy.Application.csproj" />
 	  <ProjectReference Include="..\ByteBuoy.Domain\ByteBuoy.Domain.csproj" />
 	  <ProjectReference Include="..\ByteBuoy.Infrastructure\ByteBuoy.Infrastructure.csproj" />
 	</ItemGroup>
