--- a/.github/workflows/bytebuoy_agent.yml
+++ b/.github/workflows/bytebuoy_agent.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: .src/ByteBuoy.Agent
+        working-directory: .
 
     steps:
     - uses: actions/checkout@v3
