added  tailwind, added pages controller, added bruno demo requests, added routing, metricgroup handling

--- a/client/ByteBuoy.Web/.env
+++ b/client/ByteBuoy.Web/.env
@@ -1,3 +1,4 @@
 VITE_API_KEY=bb_DEV123
-VITE_BACKEND_API_URI=http://localhost:5000/proxy
+# VITE_BACKEND_API_URI=http://localhost:5000/proxy
+VITE_BACKEND_API_URI=http://localhost:5000
 
