--- a/test/ByteBuoy.API.Tests/Fixtures/ConfigV1JobTemplate_Valid.yml
+++ b/test/ByteBuoy.API.Tests/Fixtures/ConfigV1JobTemplate_Valid.yml
@@ -1,7 +1,7 @@
 version: 1
 host: localhost:5001
 apiKey: bb_DUMMYAPIKEY
-pageId: bb_DUMMYPAGEID
+page: bb_DUMMYPAGEID
 jobs:
   - name: Copies all files from sources to targets
     action: filesCopy@v1
