--- a/test/ByteBuoy.API.Tests/Fixtures/ConfigV1JobTemplate_Invalid.yml
+++ b/test/ByteBuoy.API.Tests/Fixtures/ConfigV1JobTemplate_Invalid.yml
@@ -1,7 +1,7 @@
 host: localhost:5001
 apiKey2: bb_DUMMYAPIKEY
 pageId: bb_DUMMYPAGEID
-jobs:
+tasks:
   - name: Copies all files from sources to targets
     action: filesCopy@v1
     sources: 
