--- a/client/ByteBuoy.Web/package.json
+++ b/client/ByteBuoy.Web/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.3"
+    "react-router-dom": "^6.21.3",
+    "react-toastify": "^10.0.4"
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
