--- a/client/ByteBuoy.Web/package.json
+++ b/client/ByteBuoy.Web/package.json
@@ -13,7 +13,7 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "axios": "^1.6.5",
-    "date-fns": "^3.3.1",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
