added consolidation logic

--- a/src/ByteBuoy.Application/ByteBuoy.Application/ByteBuoy.Application.csproj
+++ b/src/ByteBuoy.Application/ByteBuoy.Application/ByteBuoy.Application.csproj
@@ -16,4 +16,8 @@
 	</PackageReference>
 	<PackageReference Include="Riok.Mapperly" Version="3.3.0" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="DTO\" />
+	</ItemGroup>
 </Project>
