--- a/src/ByteBuoy.API/ByteBuoy.API.csproj
+++ b/src/ByteBuoy.API/ByteBuoy.API.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -44,6 +44,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ByteBuoy.Application\ByteBuoy.Application\ByteBuoy.Application.csproj" />
     <ProjectReference Include="..\ByteBuoy.Infrastructure.Data\ByteBuoy.Infrastructure.Data.csproj" />
+    <ProjectReference Include="..\ByteBuoy.Infrastructure\ByteBuoy.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
