added identity, login, axios interceptor, logout

--- a/test/ByteBuoy.API.Tests/ByteBuoy.API.Tests.csproj
+++ b/test/ByteBuoy.API.Tests/ByteBuoy.API.Tests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
@@ -22,7 +22,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="FluentAssertions" Version="6.12.0" />
-		<PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="8.0.1" />
+		<PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="8.0.2" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
 		<PackageReference Include="Snapshooter.Xunit" Version="0.14.1" />
 		<PackageReference Include="System.Net.Http" Version="4.3.4" />
