--- a/client/ByteBuoy.Web/package.json
+++ b/client/ByteBuoy.Web/package.json
@@ -17,9 +17,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
-    "react-toastify": "^10.0.4"
+    "react-toastify": "^10.0.4",
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
