--- a/src/ByteBuoy.API/ByteBuoy.API.csproj
+++ b/src/ByteBuoy.API/ByteBuoy.API.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="FluentValidation" Version="11.9.0">
       <TreatAsUsed>true</TreatAsUsed>
     </PackageReference>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid.EntityFrameworkAdapter" Version="8.0.1" />
