--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -54,11 +54,12 @@ jobs:
             -- \
             --gc \
             --minify \
-            --baseURL "${{ steps.pages.outputs.base_url }}/"
+            --baseURL "${{ steps.pages.outputs.base_url }}/" \
+            --destination docs
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: ./public
+          path: ./docs
 
   # Deployment job
   deploy:
