--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -59,7 +59,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: ./docs
+          path: ./public
 
   # Deployment job
   deploy:
