--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -1,11 +1,11 @@
 # Deploy your Hyas site to GitHub Pages
-name: GitHub Pages
+name: "ByteBuoy Docs: Deploy Hugo with GitHub Pages"
 
 on:
   # Runs on pushes targeting the default branch
-  # push:
-    # branches:
-      # - main
+  push:
+    branches:
+    - main
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -31,6 +31,10 @@ jobs:
   # Build job
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./docs
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
