--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -54,6 +54,7 @@ jobs:
           HUGO_ENVIRONMENT: production
           HUGO_ENV: production
         run: |
+          cd docs \
           npm run build \
             -- \
             --gc \
