--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -38,11 +38,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+                      
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-          cache: 'npm'
+          cache: 'docs'
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v4
