--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -43,7 +43,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-          cache: 'docs'
+         # cache: 'docs'
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v4
