--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -49,6 +49,7 @@ jobs:
         uses: actions/configure-pages@v4
       - name: Install dependencies
         run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
+        working-directory: docs
       - name: Build production website
         env:
           # For maximum backward compatibility with Hugo modules
