--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -48,7 +48,7 @@ jobs:
         id: pages
         uses: actions/configure-pages@v4
       - name: Install dependencies
-        run: "npm ci"
+        run: "npm i"
         working-directory: docs
       - name: Build production website
         env:
