--- a/client/ByteBuoy.Web/package.json
+++ b/client/ByteBuoy.Web/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.21.3",
     "react-toastify": "^10.0.4",
     "zod": "^3.22.4",
