added status badge generation

--- a/scripts/deployment/traefik-docker-swarm/traefik-docker-compose.yml
+++ b/scripts/deployment/traefik-docker-swarm/traefik-docker-compose.yml
@@ -10,6 +10,7 @@ services:
     volumes: 
       - ./DB:/app/DB
       - ./appsettings.json:/app/appsettings.json      
+      - ./logs:/app/logs      
     deploy:
       labels:
         - "traefik.enable=true"
