refactor: added ByteBuoy.Core assembly

--- a/src/ByteBuoy.Agent/ByteBuoy.Agent.csproj
+++ b/src/ByteBuoy.Agent/ByteBuoy.Agent.csproj
@@ -22,6 +22,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\ByteBuoy.Application\ByteBuoy.Application\ByteBuoy.Application.csproj" />
+	  <ProjectReference Include="..\ByteBuoy.Core\ByteBuoy.Core.csproj" />
 	  <ProjectReference Include="..\ByteBuoy.Domain\ByteBuoy.Domain.csproj" />
 	  <ProjectReference Include="..\ByteBuoy.Infrastructure\ByteBuoy.Infrastructure.csproj" />
 	</ItemGroup>
