refactor: migrate to core library

--- a/src/ByteBuoy.Core/ByteBuoy.Core.csproj
+++ b/src/ByteBuoy.Core/ByteBuoy.Core.csproj
@@ -21,4 +21,14 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="RestSharp" Version="110.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ByteBuoy.Application\ByteBuoy.Application\ByteBuoy.Application.csproj" />
+    <ProjectReference Include="..\ByteBuoy.Domain\ByteBuoy.Domain.csproj" />
+    <ProjectReference Include="..\ByteBuoy.Infrastructure\ByteBuoy.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
