--- a/src/ByteBuoy.Core/ByteBuoy.Core.csproj
+++ b/src/ByteBuoy.Core/ByteBuoy.Core.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <PackageReference Include="RestSharp" Version="110.2.0" />
+    <PackageReference Include="SSH.NET" Version="2024.0.0" />
   </ItemGroup>
 
   <ItemGroup>
