--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -31,11 +31,10 @@ jobs:
         working-directory: docs
         run: yarn build
 
-      - name: Upload Build Artifact
-        working-directory: docs
+      - name: Upload Build Artefact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: build
+          path: ./docs/build
 
   deploy:
     name: Deploy to GitHub Pages
